hphp/test/zend/good/ext/gd/tests/imagecolourstotal_basic.php.skipif
<?php
	if (!extension_loaded('gd')) {
		die("skip gd extension not available.");
	}
	if (!function_exists("imagecolorstotal")) {
		die("skip imagecolorstotal() not available.");
	}
?>