hphp/test/zend/bad/ext/sockets/tests/socket_abstract_path.php.skipif
<?php
if (!extension_loaded('sockets'))
	die('skip sockets extension not available.');

if (PHP_OS != 'Linux') {
	die('skip For Linux only');
}
?>